--- a/en/惴/惴.15625.wikitext
+++ b/en/惴/惴.15625.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=9202<sub>7</sub>|canj=心山一月 (PUMB)}}
+
 # [[afraid]], [[apprehensive]], [[nervous]]
+
 ====References====
-{{Han ref|kx=0392.270|dkj=10859|dj=0728.110|hdz=42328.100|uh=60F4|ud=24820|bh=B46D|bd=46189}}
+* {{Han ref|kx=0392.270|dkj=10859|dj=0728.110|hdz=42328.100|uh=60F4|ud=24820|bh=B46D|bd=46189}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=chyun3, jeui3}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心09}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ずい]] (zui), [[すい]] (sui)|kun=[[おそれる]] (osoreru)}}
+* {{ja-readings|on=[[ずい]] (zui), [[すい]] (sui)|kun=[[おそれる]] (osoreru)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=췌|eumhun=|rv=chwe|mr=ch'we|y=chwey}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[zhuì]] ([[zhui4]])|wg=chui<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:惴]]
