--- a/en/昀/昀.16936.wikitext
+++ b/en/昀/昀.16936.wikitext
@@ -1,31 +1,51 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=8|four=6702<sub>0</sub>|canj=日心戈一 (APIM), 日心一一 (APMM)}}
+
 # sun light
 # used in personal names
+
 ====References====
-{{Han ref|kx=0490.310|dkj=13781|dj=0851.300|hdz=21495.020|uh=6600|ud=26112|bh=A9FB|bd=43515}}
+* {{Han ref|kx=0490.310|dkj=13781|dj=0851.300|hdz=21495.020|uh=6600|ud=26112|bh=A9FB|bd=43515}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=wan4}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=日04}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[いん]] (in)|kun=}}
+* {{ja-readings|on=[[いん]] (in)|kun=}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=윤|eumhun=|rv=yun|mr=yun|y=yun}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[yún]] ([[yun2]])|wg=yün<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:昀]]
