--- a/en/昦/昦.16974.wikitext
+++ b/en/昦/昦.16974.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=6022<sub>3</sub>|canj=日大中中 (AKLL)}}
+
 # {{defn|Han|sort=日05}}
+
 ====References====
-{{Han ref|kx=0493.110|dkj=13845|hdz=21499.050|uh=6626|ud=26150|bh=CEF0|bd=52976}}
+* {{Han ref|kx=0493.110|dkj=13845|hdz=21499.050|uh=6626|ud=26150|bh=CEF0|bd=52976}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=日05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[こう]] (kō)|kun=[[そら]] (sora)}}
+* {{ja-readings|on=[[こう]] (kō)|kun=[[そら]] (sora)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[hào]] ([[hao4]]), [[xū]] ([[xu1]]), [[xù]] ([[xu4]])|wg=hao<sup>4</sup>, hsü<sup>1</sup>, hsü<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:昦]]
