--- a/en/垟/垟.13091.wikitext
+++ b/en/垟/垟.13091.wikitext
@@ -1,25 +1,41 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=06|sn=9|four=4815<sub>1</sub>|canj=土廿手 (GTQ)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0228.130|dkj=05053|dj=0464.100|hdz=10442.010|uh=579F|ud=22431|bh=CE52|bd=52818}}
+* {{Han ref|kx=0228.130|dkj=05053|dj=0464.100|hdz=10442.010|uh=579F|ud=22431|bh=CE52|bd=52818}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=yeung4}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土06}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[よう]] (yō)|kun=}}
+* {{ja-readings|on=[[よう]] (yō)|kun=}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[yáng]] ([[yang2]])|wg=yang<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:垟]]
