--- a/en/偎/偎.11102.wikitext
+++ b/en/偎/偎.11102.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2623<sub>2</sub>|canj=人田一女 (OWMV)}}
+
 # cling to, cuddle, embrace, fondle
+
 ====References====
-{{Han ref|kx=0110.110|dkj=00843|dj=0235.050|hdz=10191.020|uh=504E|ud=20558|bh=B0B9|bd=45241}}
+* {{Han ref|kx=0110.110|dkj=00843|dj=0235.050|hdz=10191.020|uh=504E|ud=20558|bh=B0B9|bd=45241}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=wui1}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[わい]] (wai), [[え]] (e)|kun=[[ほのか]] (honoka), [[なじむ]] (najimu), [[したしむ]] (shitashimu), [[ちかよる]] (chikayoru)}}
+* {{ja-readings|on=[[わい]] (wai), [[え]] (e)|kun=[[ほのか]] (honoka), [[なじむ]] (najimu), [[したしむ]] (shitashimu), [[ちかよる]] (chikayoru)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=아|rv=|mr=}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[wēi]] ([[wei1]])|wg=wei<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:偎]]
