--- a/en/垉/垉.13068.wikitext
+++ b/en/垉/垉.13068.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=|canj=土心口山 (GPRU)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0227.271|hdz=10434.050|uh=5789|ud=22409}}
+* {{Han ref|kx=0227.271|hdz=10434.050|uh=5789|ud=22409}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ほう]] (hō)|kun=}}
+* {{ja-readings|on=[[ほう]] (hō)|kun=}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[páo]] ([[pao2]]), [[tóng]] ([[tong2]])|wg=p'ao<sup>2</sup>, t'ung<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[Category:Ghost kanji]]
