--- a/en/傕/傕.11175.wikitext
+++ b/en/傕/傕.11175.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=10|sn=12|four=2421<sub>4</sub>|canj=人人月土 (OOBG)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0113.170|dkj=00963|dj=0241.070|hdz=10206.090|uh=5095|ud=20629|bh=D852|bd=55378}}
+* {{Han ref|kx=0113.170|dkj=00963|dj=0241.070|hdz=10206.090|uh=5095|ud=20629|bh=D852|bd=55378}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=gok3}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人10}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[かく]] (kaku)|kun=}}
+* {{ja-readings|on=[[かく]] (kaku)|kun=}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=각|rv=gak|mr=kak}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[jué]] ([[jue2]])|wg=chüeh<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:傕]]
