--- a/en/偖/偖.11110.wikitext
+++ b/en/偖/偖.11110.wikitext
@@ -1,27 +1,43 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=|canj=人十大日 (OJKA)}}
+
 # rip up, tear down
 # raise
 # haul
+
 ====References====
-{{Han ref|kx=0110.240|dkj=00856|dj=0236.080|hdz=10186.120|uh=5056|ud=20566}}
+* {{Han ref|kx=0110.240|dkj=00856|dj=0236.080|hdz=10186.120|uh=5056|ud=20566}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[しゃ]] (sha)|kun=[[さて]] (sate)}}
+* {{ja-readings|on=[[しゃ]] (sha)|kun=[[さて]] (sate)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=차|rv=cha|mr=ch'a}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[chě]] ([[che3]]), [[zè]] ([[ze4]])|wg=ch'e<sup>3</sup>, tse<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:偖]]
