--- a/en/旺/旺.16930.wikitext
+++ b/en/旺/旺.16930.wikitext
@@ -1,32 +1,52 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=8|four=6101<sub>4</sub>|canj=日一土 (AMG)}}
+
 # [[prosper]]
 # [[prosperous]]
 # [[increase]]
+
 ====References====
-{{Han ref|kx=0490.240|dkj=13774|dj=0851.240|hdz=21488.040|uh=65FA|ud=26106|bh=A9F4|bd=43508}}
+* {{Han ref|kx=0490.240|dkj=13774|dj=0851.240|hdz=21488.040|uh=65FA|ud=26106|bh=A9F4|bd=43508}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=wong6}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=日04}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[おう]] (ō)|kun=[[さかん]] (sakan)}}
+* {{ja-readings|on=[[おう]] (ō)|kun=[[さかん]] (sakan)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=왕|eumhun=|rv=wang|mr=wang|y=wang}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[wàng]] ([[wang4]])|wg=wang<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:旺]]
