--- a/en/慈/慈.15707.wikitext
+++ b/en/慈/慈.15707.wikitext
@@ -1,37 +1,54 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=14|four=8033<sub>3</sub>|canj=廿女戈心 (TVIP)}}
+
 # [[kind]], [[charitable]], [[benevolent]]
+
 ====References====
-{{Han ref|kx=0397.250|dkj=10980|dj=0736.190|hdz=42324.030|uh=6148|ud=24904|bh=B74F|bd=46927}}
+* {{Han ref|kx=0397.250|dkj=10980|dj=0736.190|hdz=42324.030|uh=6148|ud=24904|bh=B74F|bd=46927}}
 
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=chi4}}
+
 # {{defn|Cantonese}}
 
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=c|rs=心10}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[じ]] (ji)|kun=[[いつくしむ]] (itsukushimu), [[いつくしみ]] (itsukushimi)}}
+* {{ja-readings|on=[[じ]] (ji)|kun=[[いつくしむ]] (itsukushimu), [[いつくしみ]] (itsukushimi)}}
 
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=[[자]]|eumhun=|rv=ja|mr=cha|y=ca}}
+
 # {{defn|Korean}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[cí]] ([[ci2]])|wg=tz'u<sup>2</sup>}}
+
 # {{defn|Mandarin}}
+
 ====Compounds====
-*[[慈菇]] ([[cígū]])
+* [[慈菇]] ([[cígū]])
 
 [[fr:慈]]
 [[hu:慈]]
