--- a/en/偫/偫.11131.wikitext
+++ b/en/偫/偫.11131.wikitext
@@ -1,31 +1,51 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2424<sub>1</sub>|canj=人竹人戈 (OHOI)}}
+
 # wait for
 # lay in
+
 ====References====
-{{Han ref|kx=0111.240|dkj=00888|dj=0237.210|hdz=10192.120|uh=506B|ud=20587|bh=D45F|bd=54367}}
+* {{Han ref|kx=0111.240|dkj=00888|dj=0237.210|hdz=10192.120|uh=506B|ud=20587|bh=D45F|bd=54367}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=doi6}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ち]] (chi), [[じ]] (ji)|kun=[[まつ]] (matsu), [[そなえる]] (sonaeru), [[そなわる]] (sonawaru)}}
+* {{ja-readings|on=[[ち]] (chi), [[じ]] (ji)|kun=[[まつ]] (matsu), [[そなえる]] (sonaeru), [[そなわる]] (sonawaru)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=치|rv=chi|mr=ch'i}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[zhì]] ([[zhi4]])|wg=chih<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:偫]]
