--- a/en/旿/旿.16935.wikitext
+++ b/en/旿/旿.16935.wikitext
@@ -1,25 +1,41 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=8|four=|canj=日人十 (AOJ)}}
+
 # {{defn|Han|sort=日04}}
+
 ====References====
-{{Han ref|kx=0490.300|dkj=13780|dj=0851.290|hdz=21490.070|uh=65FF|ud=26111}}
+* {{Han ref|kx=0490.300|dkj=13780|dj=0851.290|hdz=21490.070|uh=65FF|ud=26111}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=日04}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ご]] (go)|kun=[[あきらか]] (akiraka)}}
+* {{ja-readings|on=[[ご]] (go)|kun=[[あきらか]] (akiraka)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=오|eumhun=|rv=o|mr=o|y=o}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[hùn]] ([[hun4]]), [[wǔ]] ([[wu3]])|wg=hun<sup>4</sup>, wu<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:旿]]
