--- a/en/昻/昻.16996.wikitext
+++ b/en/昻/昻.16996.wikitext
@@ -1,25 +1,41 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=|canj=日一尸中 (AMSL)}}
+
 # [[rise]]
+
 ====References====
-{{Han ref|kx=0494.181|dkj=13885|dj=0859.060|hdz=21497.051|uh=663B|ud=26171}}
+* {{Han ref|kx=0494.181|dkj=13885|dj=0859.060|hdz=21497.051|uh=663B|ud=26171}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=日05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[こう]] (kō), [[ごう]] (gō)|kun=[[あがる]] (agaru), [[たかい]] (takai)}}
+* {{ja-readings|on=[[こう]] (kō), [[ごう]] (gō)|kun=[[あがる]] (agaru), [[たかい]] (takai)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=앙|eumhun=|rv=ang|mr=ang|y=ang}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[áng]] ([[ang2]])|wg=ang<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:昻]]
