--- a/en/愙/愙.15661.wikitext
+++ b/en/愙/愙.15661.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=|canj=十竹口心 (JHRP)}}
+
 # {{defn|Han|sort=心09}}
+
 ====References====
-{{Han ref|kx=0395.100|dkj=10944|dj=0731.200|hdz=42325.050|uh=6119|ud=24857}}
+* {{Han ref|kx=0395.100|dkj=10944|dj=0731.200|hdz=42325.050|uh=6119|ud=24857}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心09}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[かく]] (kaku)|kun=[[つつしむ]] (tsutsushimu)}}
+* {{ja-readings|on=[[かく]] (kaku)|kun=[[つつしむ]] (tsutsushimu)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[kè]] ([[ke4]])|wg=k'o<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愙]]
