--- a/en/傃/傃.11155.wikitext
+++ b/en/傃/傃.11155.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=10|sn=12|four=2529<sub>3</sub>|canj=人手一火 (OQMF)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0112.130|dkj=00933|dj=0239.300|hdz=10199.080|uh=5083|ud=20611|bh=D857|bd=55383}}
+* {{Han ref|kx=0112.130|dkj=00933|dj=0239.300|hdz=10199.080|uh=5083|ud=20611|bh=D857|bd=55383}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=sou3}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人10}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[そ]] (so)|kun=[[むかう]] (mukau), [[まもる]] (mamoru)}}
+* {{ja-readings|on=[[そ]] (so)|kun=[[むかう]] (mukau), [[まもる]] (mamoru)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=소|rv=so|mr=so}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[sù]] ([[su4]])|wg=su<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:傃]]
