--- a/en/偪/偪.11130.wikitext
+++ b/en/偪/偪.11130.wikitext
@@ -1,31 +1,51 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2126<sub>6</sub>|canj=人一口田 (OMRW)}}
+
 # [[compel]], [[pressure]], [[force]]
 # [[bother]]
+
 ====References====
-{{Han ref|kx=0111.230|dkj=00887|dj=0237.200|hdz=10187.020|uh=506A|ud=20586|bh=D44D|bd=54349}}
+* {{Han ref|kx=0111.230|dkj=00887|dj=0237.200|hdz=10187.020|uh=506A|ud=20586|bh=D44D|bd=54349}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=bik1}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ひょく]] (hyoku), [[ひき]] (hiki), [[ふく]] (fuku)|kun=[[せまる]] (semaru), [[むかばき]] (mukabaki)}}
+* {{ja-readings|on=[[ひょく]] (hyoku), [[ひき]] (hiki), [[ふく]] (fuku)|kun=[[せまる]] (semaru), [[むかばき]] (mukabaki)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=핍|rv=pip|mr=p'ip}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[bī]] ([[bi1]])|wg=pi<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:偪]]
