--- a/en/昩/昩.16977.wikitext
+++ b/en/昩/昩.16977.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=|canj=日木十 (ADJ)}}
+
 # {{defn|Han|sort=日05}}
+
 ====References====
-{{Han ref|kx=0493.150|dkj=13848|dj=0857.030|hdz=21497.020|uh=6629|ud=26153}}
+* {{Han ref|kx=0493.150|dkj=13848|dj=0857.030|hdz=21497.020|uh=6629|ud=26153}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=日05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ばつ]] (batsu), [[まち]] (machi)|kun=[[くもる]] (kumoru), [[ほし]] (hoshi)}}
+* {{ja-readings|on=[[ばつ]] (batsu), [[まち]] (machi)|kun=[[くもる]] (kumoru), [[ほし]] (hoshi)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[mò]] ([[mo4]])|wg=mo<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:昩]]
