--- a/en/傔/傔.11174.wikitext
+++ b/en/傔/傔.11174.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=10|sn=12|four=2823<sub>7</sub>|canj=人廿X金 (OTXC)}}
+
 # servant
+
 ====References====
-{{Han ref|kx=0113.160|dkj=00962|dj=0241.060|hdz=10205.090|uh=5094|ud=20628|bh=D853|bd=55379}}
+* {{Han ref|kx=0113.160|dkj=00962|dj=0241.060|hdz=10205.090|uh=5094|ud=20628|bh=D853|bd=55379}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=him3}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人10}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[けん]] (ken)|kun=[[したがう]] (shitagau), [[はべる]] (haberu), [[つかえる]] (tsukaeru)}}
+* {{ja-readings|on=[[けん]] (ken)|kun=[[したがう]] (shitagau), [[はべる]] (haberu), [[つかえる]] (tsukaeru)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=겸|rv=gyeom|mr=kyŏm}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[qiàn]] ([[qian4]])|wg=ch'ien<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:傔]]
