--- a/en/坵/坵.13048.wikitext
+++ b/en/坵/坵.13048.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=4211<sub>1</sub>|canj=土人一 (GOM)}}
+
 # earthenware, earthenware vessel
+
 ====References====
-{{Han ref|kx=0226.350|dkj=04990|dj=0462.120|hdz=10432.080|uh=5775|ud=22389|bh=CBFA|bd=52218}}
+* {{Han ref|kx=0226.350|dkj=04990|dj=0462.120|hdz=10432.080|uh=5775|ud=22389|bh=CBFA|bd=52218}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=yau1}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[きょう]] (kyō)|kun=[[おか]] (oka)}}
+* {{ja-readings|on=[[きょう]] (kyō)|kun=[[おか]] (oka)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=구|rv=gu|mr=ku}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[qiū]] ([[qiu1]])|wg=ch'iu<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:坵]]
