--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -80,7 +80,8 @@ From {{AGr.}} [[στόμαχος]] (stómachos)
 * Italian: {{t+|it|pancia|f}}
 * Japanese: [[腹]] ([[はら]], hara)
 * Korean: [[배]] (bae)
-* Kurdish: {{KUchar|[[زگ]]}}
+* Kurdish: 
+*:Sorani: {{t|ku|زگ|tr=zig|sc=KUchar}}, {{t|ku|ورگ|tr=wirg|sc=KUchar}}
 * Maltese: {{t-|mt|żaqq|f|xs=Maltese}}
 * Portuguese: {{t+|pt|barriga|f}}
 * Russian: {{t+|ru|живот|m|tr=živót|sc=Cyrl}}
