--- a/en/坭/坭.13040.wikitext
+++ b/en/坭/坭.13040.wikitext
@@ -1,26 +1,42 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=4711<sub>1</sub>|canj=土尸心 (GSP)}}
+
 # [[mud]], [[mire]]
 # to paste, to plaster
+
 ====References====
-{{Han ref|kx=0226.260|dkj=04981|dj=0462.030|hdz=10435.100|uh=576D|ud=22381|bh=CBF4|bd=52212}}
+* {{Han ref|kx=0226.260|dkj=04981|dj=0462.030|hdz=10435.100|uh=576D|ud=22381|bh=CBF4|bd=52212}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=nai4}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[でい]] (dei), [[ない]] (nai), [[で]] (de), [[に]] (ni)|kun=[[どろ]] (doro)}}
+* {{ja-readings|on=[[でい]] (dei), [[ない]] (nai), [[で]] (de), [[に]] (ni)|kun=[[どろ]] (doro)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[ní]] ([[ni2]])|wg=ni<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:坭]]
