--- a/en/坡/坡.13028.wikitext
+++ b/en/坡/坡.13028.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=4414<sub>7</sub>|canj=土木竹水 (GDHE)}}
+
 # [[slope]], [[bank]], [[hillside]]
+
 ====References====
-{{Han ref|kx=0226.110|dkj=04966|dj=0461.250|hdz=10436.010|uh=5761|ud=22369|bh=A959|bd=43353}}
+* {{Han ref|kx=0226.110|dkj=04966|dj=0461.250|hdz=10436.010|uh=5761|ud=22369|bh=A959|bd=43353}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=bo1, po1}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[は]] (ha), [[ひ]] (hi)|kun=[[つつみ]] (tsutsumi)}}
+* {{ja-readings|on=[[は]] (ha), [[ひ]] (hi)|kun=[[つつみ]] (tsutsumi)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=파|rv=pa|mr=p'a}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[pō]] ([[po1]])|wg=p'o<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:坡]]
