--- a/en/偹/偹.11145.wikitext
+++ b/en/偹/偹.11145.wikitext
@@ -1,27 +1,42 @@
 {{see|備}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=|canj=人中竹田 (OLHW)}}
+
 # prepare, ready, perfect
+
 ====References====
-{{Han ref|kx=0112.071|dkj=00922|hdz=10189.060|uh=5079|ud=20601}}
+* {{Han ref|kx=0112.071|dkj=00922|hdz=10189.060|uh=5079|ud=20601}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[び]] (bi)|kun=[[そなえる]] (sonaeru), [[そなわる]] (sonawaru), [[そなえ]] (sonae)}}
+* {{ja-readings|on=[[び]] (bi)|kun=[[そなえる]] (sonaeru), [[そなわる]] (sonawaru), [[そなえ]] (sonae)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=비|rv=bi|mr=pi}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[bèi]] ([[bei4]])|wg=pei<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:偹]]
