--- a/en/坖/坖.13017.wikitext
+++ b/en/坖/坖.13017.wikitext
@@ -1,13 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=一一山土 (MMUG)}}
+
 # {{defn|Han|sort=土04}}
+
 ====References====
-{{Han ref|kx=0226.100|dkj=04943|dj=0461.100|hdz=10421.080|uh=5756|ud=22358}}
+* {{Han ref|kx=0226.100|dkj=04943|dj=0461.100|hdz=10421.080|uh=5756|ud=22358}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[jì]] ([[ji4]])|wg=chi<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:坖]]
