--- a/en/垏/垏.13074.wikitext
+++ b/en/垏/垏.13074.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=06|sn=9|four=4510<sub>7</sub>|canj=土中手 (GLQ)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0227.330|dkj=05034|hdz=10442.060|uh=578F|ud=22415|bh=CE5A|bd=52826}}
+* {{Han ref|kx=0227.330|dkj=05034|hdz=10442.060|uh=578F|ud=22415|bh=CE5A|bd=52826}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土06}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ろつ]] (rotsu), [[ろち]] (rochi)|kun=}}
+* {{ja-readings|on=[[ろつ]] (rotsu), [[ろち]] (rochi)|kun=}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[lù]] ([[lu4]])|wg=lu<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:垏]]
