--- a/en/慁/慁.15700.wikitext
+++ b/en/慁/慁.15700.wikitext
@@ -1,26 +1,42 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=14|four=6033<sub>0</sub>|canj=田人心 (WOP), X田人心 (XWOP)}}
+
 # [[dishonor]], [[disobey]]
 # [[insult]]
+
 ====References====
-{{Han ref|kx=0397.110|dkj=11035|dj=0736.070|hdz=42333.130|uh=6141|ud=24897|bh=E1C4|bd=57796}}
+* {{Han ref|kx=0397.110|dkj=11035|dj=0736.070|hdz=42333.130|uh=6141|ud=24897|bh=E1C4|bd=57796}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=wan6}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心10}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[こん]] (kon), [[ごん]] (gon)|kun=[[うれえる]] (ureeru)}}
+* {{ja-readings|on=[[こん]] (kon), [[ごん]] (gon)|kun=[[うれえる]] (ureeru)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[hùn]] ([[hun4]])|wg=hun<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:慁]]
