--- a/en/昸/昸.16993.wikitext
+++ b/en/昸/昸.16993.wikitext
@@ -1,14 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=|canj=日竹水卜 (AHEY)}}
+
 # {{defn|Han|sort=日05}}
+
 ====References====
-{{Han ref|kx=0494.140|dkj=13875|hdz=21503.040|uh=6638|ud=26168}}
+* {{Han ref|kx=0494.140|dkj=13875|hdz=21503.040|uh=6638|ud=26168}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[dōng]] ([[dong1]]), [[huàng]] ([[huang4]])|wg=tung<sup>1</sup>, huang<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:昸]]
