--- a/en/昺/昺.16995.wikitext
+++ b/en/昺/昺.16995.wikitext
@@ -1,21 +1,30 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=6022<sub>7</sub>|canj=日一人月 (AMOB)}}
+
 # [[bright]], [[glorious]]
 # [[brilliant]]
+
 ====References====
-{{Han ref|kx=0494.180|dkj=13836|hdz=21499.040|uh=663A|ud=26170|bh=CEF4|bd=52980}}
+* {{Han ref|kx=0494.180|dkj=13836|hdz=21499.040|uh=663A|ud=26170|bh=CEF4|bd=52980}}
 
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=병|eumhun=|rv=byeong|mr=pyŏng|y=pyeng}}
+
 # {{defn|Korean}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[bǐng]] ([[bing3]])|wg=ping<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:昺]]
