--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -29,67 +29,68 @@ From Old English [[ceosan|ċēosan]].
 
 ====Translations====
 {{trans-top|to elect}}
-*[[Catalan]]: [[escollir]], [[elegir]], [[triar]]
-*Danish: [[vælge]], [[kåre]]
+* [[Catalan]]: [[escollir]], [[elegir]], [[triar]]
+* Danish: [[vælge]], [[kåre]]
 * Dutch: {{t+|nl|kiezen}}, {{t+|nl|verkiezen}}
 * Finnish: {{t+|fi|valita}}
 * French: {{t+|fr|choisir}}
 * German: {{t+|de|wählen}}
-*Greek: {{t+|el|εκλέγω|sc=Grek}} (eklégo)
+* Greek: {{t+|el|εκλέγω|sc=Grek}} (eklégo)
+* Hungarian: {{t|hu|megválaszt}}
 {{trans-mid}}
 * Italian: {{t+|it|eleggere}}
 * Polish: {{t+|pl|wybierać}}, {{t-|pl|wybrać}}
 * Portuguese: {{t-|pt|escolher}}
 * Romanian: {{t-|ro|alege}}
-*Slovene: [[izvoliti]]
+* Slovene: [[izvoliti]]
 * Spanish: {{t+|es|elegir}}
 * Swedish: {{t+|sv|välja}}
-*[[Tagalog]]: [[pili]]
+* [[Tagalog]]: [[pili]]
 {{trans-bottom}}
 
 {{trans-top|to pick}}
-*[[Catalan]]: [[elegir]]
-*Danish: [[udvælge]], [[vælge]], [[foretrække]]
+* [[Catalan]]: [[elegir]]
+* Danish: [[udvælge]], [[vælge]], [[foretrække]]
 * Dutch: {{t+|nl|kiezen}}, {{t+|nl|uitkiezen}}
 * Finnish: {{t+|fi|valita}}
 * French: {{t+|fr|choisir}}
 * German: {{t-|de|auswählen}}, {{t+|de|wählen}}
-*Greek: {{t+|el|διαλέγω|sc=Grek}} (dialégo)
-*Hebrew: [[לבחור]] (livkhor)
+* Greek: {{t+|el|διαλέγω|sc=Grek}} (dialégo)
+* Hebrew: [[לבחור]] (livkhor)
+* Hungarian: {{t|hu|kiválaszt}}
 {{trans-mid}}
 * Italian: {{t+|it|scegliere}}, {{t+|it|selezionare}}
 * Maori: {{t-|mi|whiri|xs=Maori}}
 * Portuguese: {{t-|pt|escolher}}
 * Romanian: {{t-|ro|alege}}
-*Slovene: [[izbrati]]
+* Slovene: [[izbrati]]
 * Spanish: {{t-|es|escoger}}
 * Swedish: {{t+|sv|välja}}
-*[[Tagalog]]: [[pili]]
+* [[Tagalog]]: [[pili]]
 {{trans-bottom}}
 
-'''decide to act in a certain way''' (3)
 {{trans-top|to decide to act in a certain way}}
-*Danish: [[foretrække]], [[have lyst]], [[finde for godt]]
+* Danish: [[foretrække]], [[have lyst]], [[finde for godt]]
 * Dutch: {{t+|nl|kiezen}}
-*Finnish: [[päättää]] [[tehdä]]
+* Finnish: [[päättää]] [[tehdä]]
 {{trans-mid}}
 * Portuguese: {{t-|pt|escolher}}
 * Romanian: {{t-|ro|vrea}}, {{t-|ro|prefera}}
 {{trans-bottom}}
 
-=====Translations to be checked=====
-{{checktrans}}
+{{checktrans-top}}
 *{{ttbc|Albanian}}: [[zgjedh]]
 *{{ttbc|Chinese}}: [[選擇]]
 *{{ttbc|Croatian}}: [[izabrati]], [[izabirati]]
 *{{ttbc|Español}}: [[elegir]], [[escoger]]
 *{{ttbc|Esperanto}}: [[elekti]]
-*{{ttbc|Hungarian}}: [[választ]]
+{{checktrans-mid}}
 *{{ttbc|Ilocano}}: [[pili]]
 *{{ttbc|Indonesian}}: [[pilih]]
 *{{ttbc|Japanese}}: [[選ぶ]] ([[えらぶ]], erabu)
 *{{ttbc|Norwegian}}: [[velge]], [[utvelge]], [[beslutte]]
 *{{ttbc|Tongan}}: [[fili]]
+{{checktrans-bottom}}
 
 ===References===
 {{R:Century 1911}}
