--- a/en/慏/慏.15715.wikitext
+++ b/en/慏/慏.15715.wikitext
@@ -1,14 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=13|four=9708<sub>0</sub>|canj=心月日金 (PBAC)}}
+
 # {{defn|Han|sort=心10}}
+
 ====References====
-{{Han ref|kx=0398.261|dkj=11065|hdz=42339.100|uh=614F|ud=24911|bh=DD6F|bd=56687}}
+* {{Han ref|kx=0398.261|dkj=11065|hdz=42339.100|uh=614F|ud=24911|bh=DD6F|bd=56687}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[mǐng]] ([[ming3]])|wg=ming<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:慏]]
