--- a/en/时/时.16926.wikitext
+++ b/en/时/时.16926.wikitext
@@ -1,96 +1,103 @@
 {{see|時}}
-
 ==Translingual==
 {{Han stroke|[[Image:时-order.gif]]}}
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=03|sn=7|four=|canj=日木戈 (ADI)}}
+
 # [[time]], [[season]]
 # [[era]], [[age]], [[period]]
+
 ====References====
-{{Han ref|kx=0490.221|dkj=13772|dj=0851.220|hdz=21487.020|uh=65F6|ud=26102}}
+* {{Han ref|kx=0490.221|dkj=13772|dj=0851.220|hdz=21487.020|uh=65F6|ud=26102}}
 
 ----
 
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=si4}}
+
 # {{defn|Cantonese}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|tra=時|pin=[[shí]] ([[shi2]])|wg=shih<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 ====Compounds====
-*[[时弊]]
-*[[时不常儿]]
-*[[时不时]]
-*[[时不我待]]
-*[[时不我与]]
-*[[时差]]
-*[[时常]]
-*[[时辰]]
-*[[时代]]
-*[[时点]]
-*[[时段]]
-*[[时而]]
-*[[时分]]
-*[[时乖命蹇]]
-*[[时光]]
-*[[时过境迁]]
-*[[时候]]
-*[[时或]]
-*[[时机]]
-*[[时价]]
-*[[时间]]
-*[[时间词]]
-*[[时间性]]
-*[[时节]]
-*[[时局]]
-*[[时刻]]
-*[[时空]]
-*[[时款]]
-*[[时来运转]]
-*[[时令]]
-*[[时论]]
-*[[时髦]]
-*[[时评]]
-*[[时期]]
-*[[时区]]
-*[[时日]]
-*[[时尚]]
-*[[时时]]
-*[[时世]]
-*[[时事]]
-*[[时势]]
-*[[时俗]]
-*[[时速]]
-*[[时态助词]]
-*[[时务]]
-*[[时下]]
-*[[时鲜]]
-*[[时限]]
-*[[时效]]
-*[[时效处理]]
-*[[时新]]
-*[[时兴]]
-*[[时序]]
-*[[时样]]
-*[[时宜]]
-*[[时移势迁]]
-*[[时移俗易]]
-*[[时隐时现]]
-*[[时有所闻]]
-*[[时雨]]
-*[[时运]]
-*[[时针]]
-*[[时政]]
-*[[时值]]
-*[[时钟]]
-*[[时钟座]]
-*[[时装]]
-*[[时装表演]]
+* [[时弊]]
+* [[时不常儿]]
+* [[时不时]]
+* [[时不我待]]
+* [[时不我与]]
+* [[时差]]
+* [[时常]]
+* [[时辰]]
+* [[时代]]
+* [[时点]]
+* [[时段]]
+* [[时而]]
+* [[时分]]
+* [[时乖命蹇]]
+* [[时光]]
+* [[时过境迁]]
+* [[时候]]
+* [[时或]]
+* [[时机]]
+* [[时价]]
+* [[时间]]
+* [[时间词]]
+* [[时间性]]
+* [[时节]]
+* [[时局]]
+* [[时刻]]
+* [[时空]]
+* [[时款]]
+* [[时来运转]]
+* [[时令]]
+* [[时论]]
+* [[时髦]]
+* [[时评]]
+* [[时期]]
+* [[时区]]
+* [[时日]]
+* [[时尚]]
+* [[时时]]
+* [[时世]]
+* [[时事]]
+* [[时势]]
+* [[时俗]]
+* [[时速]]
+* [[时态助词]]
+* [[时务]]
+* [[时下]]
+* [[时鲜]]
+* [[时限]]
+* [[时效]]
+* [[时效处理]]
+* [[时新]]
+* [[时兴]]
+* [[时序]]
+* [[时样]]
+* [[时宜]]
+* [[时移势迁]]
+* [[时移俗易]]
+* [[时隐时现]]
+* [[时有所闻]]
+* [[时雨]]
+* [[时运]]
+* [[时针]]
+* [[时政]]
+* [[时值]]
+* [[时钟]]
+* [[时钟座]]
+* [[时装]]
+* [[时装表演]]
 
 [[fr:时]]
 [[ko:时]]
