--- a/en/慀/慀.15699.wikitext
+++ b/en/慀/慀.15699.wikitext
@@ -1,15 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=13|four=9203<sub>4</sub>|canj=心月女大 (PBVK)}}
 
 {{substub}}
+
 ====References====
-{{Han ref|kx=0397.100|dkj=11034|dj=0736.060|hdz=42338.010|uh=6140|ud=24896|bh=DD71|bd=56689}}
+* {{Han ref|kx=0397.100|dkj=11034|dj=0736.060|hdz=42338.010|uh=6140|ud=24896|bh=DD71|bd=56689}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[xié]] ([[xie2]])|wg=hsieh<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:慀]]
