--- a/en/块/块.13018.wikitext
+++ b/en/块/块.13018.wikitext
@@ -1,28 +1,43 @@
 {{see|塊}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=土木大 (GDK)}}
+
 # [[piece]], [[lump]]
 # [[yuan]]
+
 ====References====
-{{Han ref|kx=0226.101|dkj=04948|dj=0461.110|hdz=10428.050|uh=5757|ud=22359}}
+* {{Han ref|kx=0226.101|dkj=04948|dj=0461.110|hdz=10428.050|uh=5757|ud=22359}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=faai3}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土04}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[かい]] (kai)|kun=}}
+* {{ja-readings|on=[[かい]] (kai)|kun=}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|tra=塊|pin=[[kuài]] ([[kuai4]])|wg=k'uai<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:块]]
