--- a/en/愱/愱.15684.wikitext
+++ b/en/愱/愱.15684.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=13|four=|canj=心大人大 (PKOK)}}
+
 # {{defn|Han|sort=心10}}
+
 ====References====
-{{Han ref|kx=0396.230|dkj=10998|dj=0735.110|hdz=42338.130|uh=6131|ud=24881}}
+* {{Han ref|kx=0396.230|dkj=10998|dj=0735.110|hdz=42338.130|uh=6131|ud=24881}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心10}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[しつ]] (shitsu), [[しち]] (shichi)|kun=[[くるしむ]] (kurushimu)}}
+* {{ja-readings|on=[[しつ]] (shitsu), [[しち]] (shichi)|kun=[[くるしむ]] (kurushimu)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[jí]] ([[ji2]])|wg=chi<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愱]]
