--- a/en/傒/傒.11172.wikitext
+++ b/en/傒/傒.11172.wikitext
@@ -1,31 +1,51 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=10|sn=12|four=2223<sub>4</sub>|canj=人月女大 (OBVK)}}
+
 # personal name
 # servant
+
 ====References====
-{{Han ref|kx=0113.130|dkj=00959|dj=0241.040|hdz=10203.210|uh=5092|ud=20626|bh=D85D|bd=55389}}
+* {{Han ref|kx=0113.130|dkj=00959|dj=0241.040|hdz=10203.210|uh=5092|ud=20626|bh=D85D|bd=55389}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=hoi4}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人10}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[けい]] (kei), [[げい]] (gei)|kun=[[あやうい]] (ayaui), [[つなぐ]] (tsunagu)}}
+* {{ja-readings|on=[[けい]] (kei), [[げい]] (gei)|kun=[[あやうい]] (ayaui), [[つなぐ]] (tsunagu)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=혜|rv=hye|mr=hye}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[xī]] ([[xi1]])|wg=hsi<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:傒]]
