--- a/en/坳/坳.13046.wikitext
+++ b/en/坳/坳.13046.wikitext
@@ -1,31 +1,51 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=4412<sub>7</sub>|canj=土女戈尸 (GVIS)}}
+
 # a hollow in the ground, a cavity, depression
 # [[undulating]], [[depressed]]
+
 ====References====
-{{Han ref|kx=0226.330|dkj=04988|dj=0462.100|hdz=10436.090|uh=5773|ud=22387|bh=CBFC|bd=52220}}
+* {{Han ref|kx=0226.330|dkj=04988|dj=0462.100|hdz=10436.090|uh=5773|ud=22387|bh=CBFC|bd=52220}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=aau1, aau3}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[あう]] (au), [[えう]] (eu)|kun=[[くぼみ]] (kubomi)}}
+* {{ja-readings|on=[[あう]] (au), [[えう]] (eu)|kun=[[くぼみ]] (kubomi)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=요|rv=yo|mr=yo}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[ào]] ([[ao4]])|wg=ao<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:坳]]
