--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -27,7 +27,7 @@
 *[[Basque]]: [[adreilu]]
 *Bulgarian: [[тухла]]
 *[[Catalan]]: [[maó]]
-*Chinese: [[磚]]
+*Chinese traditional/simplified: [[磚塊]], [[砖块]] (zhuān kuài)
 *Czech: [[cihla]] {{f}}
 *Danish: [[mursten]] {{c}}
 *Dutch: [[baksteen]]
@@ -61,6 +61,7 @@
 {{trans-bottom}}
 
 {{trans-top|a building material}}
+*Chinese traditional/simplified: [[磚塊]], [[砖块]] (zhuān kuài), [[磚頭]], [[砖头]] (zhuān tóu)
 *Danish: [[mursten]] {{c}}
 *Finnish: [[tiili]]
 *Icelandic: [[múrsteinn]] {{m}}, [[byggingarklossar]] {{m|p}}, [[byggingarkubbar]] {{n|p}}
@@ -75,6 +76,7 @@
 {{trans-bottom}}
 
 {{trans-top|term of endearment}}
+*Chinese traditional/simplified: [[好心腸]]的, [[好心肠]]的 (hǎo xīn cháng de)
 *Danish: [[sveske]] {{c}}, [[knag]] {{c}}
 *Icelandic: [[ágætis manneskja]] {{f}}, [[perla af manni]] {{f}}, [[fyrirtaks manneskja]] {{f}}
 {{trans-mid}}
@@ -84,7 +86,6 @@
 *{{ttbc|Afrikaans}}: [[baksteen]]
 *{{ttbc|Arabic}}: [[طوبة]] (ṭūbah)
 *{{ttbc|Breton}}: [[brikenn]] {{f}} -où
-*{{ttbc|Chinese}}: [[磚]], [[砖]]
 *{{ttbc|Dutch}}: [[baksteen]]
 *{{ttbc|Estonian}}: [[telliskivi]], [[tellis]]
 *{{ttbc|French}}: [[brique]] {{f}} (1,2)
