--- a/en/昳/昳.16988.wikitext
+++ b/en/昳/昳.16988.wikitext
@@ -1,25 +1,41 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=6503<sub>0</sub>|canj=日竹手人 (AHQO)}}
+
 # the declining sun in the west
+
 ====References====
-{{Han ref|kx=0494.050|dkj=13864|dj=0858.110|hdz=21502.010|uh=6633|ud=26163|bh=CEF2|bd=52978}}
+* {{Han ref|kx=0494.050|dkj=13864|dj=0858.110|hdz=21502.010|uh=6633|ud=26163|bh=CEF2|bd=52978}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=dit6}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=日05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[てつ]] (tetsu), [[でち]] (dechi), [[いつ]] (itsu)|kun=[[かたむく]] (katamuku)}}
+* {{ja-readings|on=[[てつ]] (tetsu), [[でち]] (dechi), [[いつ]] (itsu)|kun=[[かたむく]] (katamuku)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[dié]] ([[die2]])|wg=tieh<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:昳]]
