--- a/en/昋/昋.16947.wikitext
+++ b/en/昋/昋.16947.wikitext
@@ -1,14 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=8|four=2060<sub>3</sub>|canj=竹大日 (HKA)}}
+
 # {{defn|Han|sort=日04}}
+
 ====References====
-{{Han ref|kx=0491.080|dkj=13800|dj=0852.150|hdz=21488.070|uh=660B|ud=26123|bh=CCCB|bd=52427}}
+* {{Han ref|kx=0491.080|dkj=13800|dj=0852.150|hdz=21488.070|uh=660B|ud=26123|bh=CCCB|bd=52427}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[guì]] ([[gui4]])|wg=kuei<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:昋]]
