--- a/en/圿/圿.12994.wikitext
+++ b/en/圿/圿.12994.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=土人中中 (GOLL)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0224.230|dkj=04907|dj=0459.110|hdz=10423.110|uh=573F|ud=22335}}
+* {{Han ref|kx=0224.230|dkj=04907|dj=0459.110|hdz=10423.110|uh=573F|ud=22335}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土04}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[かつ]] (katsu), [[けち]] (kechi)|kun=[[あか]] (aka), [[ちり]] (chiri)}}
+* {{ja-readings|on=[[かつ]] (katsu), [[けち]] (kechi)|kun=[[あか]] (aka), [[ちり]] (chiri)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[jiá]] ([[jia2]]), [[xùn]] ([[xun4]])|wg=chia<sup>2</sup>, hsün<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:圿]]
